tests/snapshots/formats__minix__minix3.img.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ minix3.img — Minix v3 filesystem, 64.0 KiB, 32 inodes, 60-character names  [0x0+0x10000]
  ▾ Superblock  [0x400+0x1f]
      Inodes: 32  [0x400+0x4]
      Padding: 0  [0x404+0x2]
      Inode bitmap blocks: 1  [0x406+0x2]
      Zone bitmap blocks: 1  [0x408+0x2]
      First data zone: 6  [0x40a+0x2]
      Zone size (log2 blocks): 0  [0x40c+0x2]
      Padding: 0  [0x40e+0x2]
      Maximum file size: 2147483647 — 2.0 GiB  [0x410+0x4]
      Zones: 64  [0x414+0x4]
      Magic: 0x4d5a  [0x418+0x2]
      Padding: 0  [0x41a+0x2]
      Block size: 1024  [0x41c+0x2]
      Disk version: 0  [0x41e+0x1]
    Boot block — left for a boot loader  [0x0+0x400]
    Unused — rest of the superblock's block  [0x41f+0x3e1]
    Inode bitmap — 5 of 32 inodes in use (bit 0 is reserved)  [0x800+0x400]
    Zone bitmap — 7 of 58 data zones in use (bit 0 is reserved)  [0xc00+0x400]
  ▾ Inode table — 32 inodes of 64 bytes  [0x1000+0x800]
    ▾ Inode 1  [0x1000+0x40]
        Mode: 0x41ed — drwxr-xr-x  [0x1000+0x2]
        Links: 3  [0x1002+0x2]
        Owner: 0  [0x1004+0x2]
        Group: 0  [0x1006+0x2]
        Size: 320  [0x1008+0x4]
        Accessed: 2026-10-06 00:15:50 UTC  [0x100c+0x4]
        Modified: 2026-10-06 00:15:50 UTC  [0x1010+0x4]
        Changed: 2026-10-06 00:15:50 UTC  [0x1014+0x4]
        Zones (7 direct, indirect, double, triple): 06 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1018+0x28]
    ▾ Inode 2  [0x1040+0x40]
        Mode: 0x81a4 — -rw-r--r--  [0x1040+0x2]
        Links: 1  [0x1042+0x2]
        Owner: 0  [0x1044+0x2]
        Group: 0  [0x1046+0x2]
        Size: 17  [0x1048+0x4]
        Accessed: 2024-05-17 13:37:42 UTC  [0x104c+0x4]
        Modified: 2024-05-17 13:37:42 UTC  [0x1050+0x4]
        Changed: 2024-05-17 13:37:42 UTC  [0x1054+0x4]
        Zones (7 direct, indirect, double, triple): 07 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1058+0x28]
    ▾ Inode 3  [0x1080+0x40]
        Mode: 0x41ed — drwxr-xr-x  [0x1080+0x2]
        Links: 2  [0x1082+0x2]
        Owner: 0  [0x1084+0x2]
        Group: 0  [0x1086+0x2]
        Size: 192  [0x1088+0x4]
        Accessed: 2024-05-17 13:37:42 UTC  [0x108c+0x4]
        Modified: 2024-05-17 13:37:42 UTC  [0x1090+0x4]
        Changed: 2024-05-17 13:37:42 UTC  [0x1094+0x4]
        Zones (7 direct, indirect, double, triple): 08 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1098+0x28]
    ▾ Inode 4  [0x10c0+0x40]
        Mode: 0x81a4 — -rw-r--r--  [0x10c0+0x2]
        Links: 1  [0x10c2+0x2]
        Owner: 0  [0x10c4+0x2]
        Group: 0  [0x10c6+0x2]
        Size: 12  [0x10c8+0x4]
        Accessed: 2024-05-17 13:37:42 UTC  [0x10cc+0x4]
        Modified: 2024-05-17 13:37:42 UTC  [0x10d0+0x4]
        Changed: 2024-05-17 13:37:42 UTC  [0x10d4+0x4]
        Zones (7 direct, indirect, double, triple): 09 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x10d8+0x28]
    ▾ Inode 5  [0x1100+0x40]
        Mode: 0x8180 — -rw-------  [0x1100+0x2]
        Links: 1  [0x1102+0x2]
        Owner: 0  [0x1104+0x2]
        Group: 0  [0x1106+0x2]
        Size: 2600  [0x1108+0x4]
        Accessed: 2024-05-17 13:37:42 UTC  [0x110c+0x4]
        Modified: 2024-05-17 13:37:42 UTC  [0x1110+0x4]
        Changed: 2024-05-17 13:37:42 UTC  [0x1114+0x4]
        Zones (7 direct, indirect, double, triple): 0c 00 00 00 0a 00 00 00 0e 00 00 00 00 00 00 00 …  |................|  [0x1118+0x28]
      Inodes 6–32 — 27 unused  [0x1140+0x6c0]
  ▾ Free zones — from the zone bitmap
      Zones 11–11 — free, 1.0 KiB  [0x2c00+0x400]
      Zones 13–13 — free, 1.0 KiB  [0x3400+0x400]
      Zones 15–63 — free, 49.0 KiB  [0x3c00+0xc400]
  ▾ Root directory — inode 1
    ▾ Inode 1  [0x1000+0x40]
        Mode: 0x41ed — drwxr-xr-x  [0x1000+0x2]
        Links: 3  [0x1002+0x2]
        Owner: 0  [0x1004+0x2]
        Group: 0  [0x1006+0x2]
        Size: 320  [0x1008+0x4]
        Accessed: 2026-10-06 00:15:50 UTC  [0x100c+0x4]
        Modified: 2026-10-06 00:15:50 UTC  [0x1010+0x4]
        Changed: 2026-10-06 00:15:50 UTC  [0x1014+0x4]
        Zones (7 direct, indirect, double, triple): 06 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1018+0x28]
    ▾ hello.txt — -rw-r--r--, inode 2  [0x1880+0x40]
      ▾ Inode 2  [0x1040+0x40]
          Mode: 0x81a4 — -rw-r--r--  [0x1040+0x2]
          Links: 1  [0x1042+0x2]
          Owner: 0  [0x1044+0x2]
          Group: 0  [0x1046+0x2]
          Size: 17  [0x1048+0x4]
          Accessed: 2024-05-17 13:37:42 UTC  [0x104c+0x4]
          Modified: 2024-05-17 13:37:42 UTC  [0x1050+0x4]
          Changed: 2024-05-17 13:37:42 UTC  [0x1054+0x4]
          Zones (7 direct, indirect, double, triple): 07 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1058+0x28]
      ▾ Zones — contiguous, 17 bytes
          Fragment 0 — file offset 0x0, 17 bytes  [0x1c00+0x11]
      ▾ Content — UTF-8 text, LF line endings, 1 line  [0x1c00+0x11]
          Encoding: "UTF-8"
          Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
        ▾ Lines — 1 line  [0x1c00+0x11]
            Line 1: "hello from minix"  [0x1c00+0x10]
    ▾ Sub directory — drwxr-xr-x, inode 3  [0x18c0+0x40]
      ▾ Inode 3  [0x1080+0x40]
          Mode: 0x41ed — drwxr-xr-x  [0x1080+0x2]
          Links: 2  [0x1082+0x2]
          Owner: 0  [0x1084+0x2]
          Group: 0  [0x1086+0x2]
          Size: 192  [0x1088+0x4]
          Accessed: 2024-05-17 13:37:42 UTC  [0x108c+0x4]
          Modified: 2024-05-17 13:37:42 UTC  [0x1090+0x4]
          Changed: 2024-05-17 13:37:42 UTC  [0x1094+0x4]
          Zones (7 direct, indirect, double, triple): 08 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1098+0x28]
      ▾ nested.md — -rw-r--r--, inode 4  [0x2080+0x40]
        ▾ Inode 4  [0x10c0+0x40]
            Mode: 0x81a4 — -rw-r--r--  [0x10c0+0x2]
            Links: 1  [0x10c2+0x2]
            Owner: 0  [0x10c4+0x2]
            Group: 0  [0x10c6+0x2]
            Size: 12  [0x10c8+0x4]
            Accessed: 2024-05-17 13:37:42 UTC  [0x10cc+0x4]
            Modified: 2024-05-17 13:37:42 UTC  [0x10d0+0x4]
            Changed: 2024-05-17 13:37:42 UTC  [0x10d4+0x4]
            Zones (7 direct, indirect, double, triple): 09 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x10d8+0x28]
        ▾ Zones — contiguous, 12 bytes
            Fragment 0 — file offset 0x0, 12 bytes  [0x2400+0xc]
        ▾ Content — UTF-8 text, LF line endings, 1 line  [0x2400+0xc]
            Encoding: "UTF-8"
            Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
          ▾ Lines — 1 line  [0x2400+0xc]
              Line 1: "nested file"  [0x2400+0xb]
    ▾ fragmented.bin — -rw-------, inode 5  [0x1900+0x40]
      ▾ Inode 5  [0x1100+0x40]
          Mode: 0x8180 — -rw-------  [0x1100+0x2]
          Links: 1  [0x1102+0x2]
          Owner: 0  [0x1104+0x2]
          Group: 0  [0x1106+0x2]
          Size: 2600  [0x1108+0x4]
          Accessed: 2024-05-17 13:37:42 UTC  [0x110c+0x4]
          Modified: 2024-05-17 13:37:42 UTC  [0x1110+0x4]
          Changed: 2024-05-17 13:37:42 UTC  [0x1114+0x4]
          Zones (7 direct, indirect, double, triple): 0c 00 00 00 0a 00 00 00 0e 00 00 00 00 00 00 00 …  |................|  [0x1118+0x28]
      ▾ Zones — 3 fragments, 2.5 KiB
          Fragment 0 — file offset 0x0, 1.0 KiB  [0x3000+0x400]
          Fragment 1 — file offset 0x400, 1.0 KiB  [0x2800+0x400]
          Fragment 2 — file offset 0x800, 552 bytes  [0x3800+0x228]
      ▾ Content — 2.5 KiB  [#1:0x0+0xa28]
          Data  [#1:0x0+0xa28]
