tests/snapshots/formats__minix__mkfs-minix3.img.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ mkfs-minix3.img — Minix v3 filesystem, 64 KiB, 32 inodes, 60-character names  [0x0+0x10000]
  ▾ Superblock  [0x400+0x1f]
      Inodes: 32  [0x400+0x4]
      Padding: 0  [0x404+0x2]
      Inode bitmap blocks: 1  [0x406+0x2]
      Zone bitmap blocks: 1  [0x408+0x2]
      First data zone: 6  [0x40a+0x2]
      Zone size (log2 blocks): 0  [0x40c+0x2]
      Padding: 0  [0x40e+0x2]
      Maximum file size: 2147483647 — 1.9 GiB  [0x410+0x4]
      Zones: 64  [0x414+0x4]
      Magic: 0x4d5a  [0x418+0x2]
      Padding: 0  [0x41a+0x2]
      Block size: 1024  [0x41c+0x2]
      Disk version: 0  [0x41e+0x1]
    Boot block — left for a boot loader  [0x0+0x400]
    Unused — rest of the superblock's block  [0x41f+0x3e1]
    Inode bitmap — 1 of 32 inodes in use (bit 0 is reserved)  [0x800+0x400]
    Zone bitmap — 1 of 58 data zones in use (bit 0 is reserved)  [0xc00+0x400]
  ▾ Inode table — 32 inodes of 64 bytes  [0x1000+0x800]
    ▾ Inode 1  [0x1000+0x40]
        Mode: 0x41ed — drwxr-xr-x  [0x1000+0x2]
        Links: 2  [0x1002+0x2]
        Owner: 0  [0x1004+0x2]
        Group: 0  [0x1006+0x2]
        Size: 128  [0x1008+0x4]
        Accessed: 2026-10-10 00:50:32 UTC  [0x100c+0x4]
        Modified: 2026-10-10 00:50:32 UTC  [0x1010+0x4]
        Changed: 2026-10-10 00:50:32 UTC  [0x1014+0x4]
        Zones (7 direct, indirect, double, triple): 06 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1018+0x28]
      Inodes 2–32 — 31 unused  [0x1040+0x7c0]
  ▾ Free zones — from the zone bitmap
      Zones 7–63 — free, 57 KiB  [0x1c00+0xe400]
  ▾ Root directory — inode 1
    ▾ Inode 1  [0x1000+0x40]
        Mode: 0x41ed — drwxr-xr-x  [0x1000+0x2]
        Links: 2  [0x1002+0x2]
        Owner: 0  [0x1004+0x2]
        Group: 0  [0x1006+0x2]
        Size: 128  [0x1008+0x4]
        Accessed: 2026-10-10 00:50:32 UTC  [0x100c+0x4]
        Modified: 2026-10-10 00:50:32 UTC  [0x1010+0x4]
        Changed: 2026-10-10 00:50:32 UTC  [0x1014+0x4]
        Zones (7 direct, indirect, double, triple): 06 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1018+0x28]
